--- a/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
@@ -15,13 +15,13 @@
                 <consultant role="dharmaMaster" ref="eft:person-40">Chökyi Nyima Rinpoche</consultant>
                 <author role="translatorEng" ref="eft:person-75">Timothy Hinkle</author>
                 <author role="translatorEng" ref="eft:person-50">Andreas Doctor</author>
-                <consultant role="advisor" ref="eft:person-116">Dr. Ulrich Pagel</consultant>
-                <consultant role="projectManager" ref="eft:person-50">Dr. Andreas Doctor</consultant>
+                <consultant role="advisor" ref="eft:person-116">Ulrich Pagel</consultant>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
                 <sponsor ref="sponsors.xml#sponsor-7">Leo Tong Chen and his family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.5 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -41,13 +41,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-09T09:03:41.056Z" user="admin">09/08/2022 09:03:41</note>
+                <note type="lastUpdated" date-time="2022-08-09T09:04:22.058Z" user="admin">09/08/2022 09:04:22</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:19.044Z" user="mike">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-29T15:57:01.899Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2022-08-09T09:02:49.463Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-09T09:02:49.463Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-09T09:03:33.081Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-08-09T09:04:14.061Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
