--- a/translations/kangyur/translations/072-033_toh333-the_sutra_of_vasistha.xml
+++ b/translations/kangyur/translations/072-033_toh333-the_sutra_of_vasistha.xml
@@ -7,28 +7,24 @@
                                 <title type="mainTitle" xml:lang="en">The Sūtra of Vasiṣṭha</title>
                                 <title type="mainTitle" xml:lang="Bo-Ltn">gnas ’jog gi mdo</title>
                                 <title type="mainTitle" xml:lang="bo">གནས་འཇོག་གི་མདོ།</title>
+                                <title type="longTitle" xml:lang="en">The Noble “Sūtra of
+                                        Vasiṣṭha”</title>
                                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa gnas ’jog gi mdo
                                         zhes bya ba</title>
                                 <title type="longTitle" xml:lang="bo">འཕགས་པ་གནས་འཇོག་གི་མདོ་ཞེས་བྱ་བ།</title>
-                                <title type="longTitle" xml:lang="en">The Noble “Sūtra of
-                                        Vasiṣṭha”</title>
                                 <author role="translatorMain" ref="eft:team-69">Translated by
                                         Elizabeth Angowski<lb/>under the patronage and supervision
                                         of 84000: Translating the Words of the Buddha</author>
-                                <author role="translatorEng" ref="eft:person-379">Elizabeth
-                                        Angowski</author>
-                                <editor role="projectEditor" ref="eft:person-289">Nathaniel
-                                        Rich</editor>
-                                <editor role="copyEditor" ref="eft:person-66">Joseph
-                                        McClellan</editor>
+                                <author role="translatorEng" ref="eft:person-379">Elizabeth Angowski</author>
+                                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                                <editor role="copyEditor" ref="eft:person-66">Joseph McClellan</editor>
                                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
-                                <editor role="projectEditor" ref="eft:person-74">Ryan
-                                        Damron</editor>
-                                <editor role="TEImarkupEditor" ref="eft:person-391">Sameer
-                                        Dhingra</editor>
+                                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+                                <editor role="finalReviewer" ref="eft:person-50">Andreas Doctor</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -70,7 +66,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-05-17T06:36:04.051Z" user="admin">17/05/2022 06:36:04</note>
+                                <note type="lastUpdated" date-time="2022-08-11T10:27:41.02Z" user="admin">11/08/2022 10:27:41</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2021-10-25T12:25:44.636Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T12:25:44.636Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-10-29T14:17:40.208Z" user="line-tofte">3</note>
@@ -114,8 +110,9 @@
                                 <note type="updated" update="translation-status" value="2.a" date-time="2022-04-19T12:36:52.912Z" user="line-tofte">2.a</note>
                                 <note type="updated" update="text-version" value="0.0.17" date-time="2022-04-19T12:36:52.912Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-                            <note type="updated" update="translation-status" value="2" date-time="2022-05-17T06:35:56.431Z" user="line-tofte">2</note>
-                            <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-17T06:35:56.431Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="translation-status" value="2" date-time="2022-05-17T06:35:56.431Z" user="line-tofte">2</note>
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-17T06:35:56.431Z" user="line-tofte">Auto (update-publication-status)</note>
+                            <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-11T10:27:32.421Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -1076,7 +1073,7 @@
                                                 Manjeet Baruah, 23–55. Routledge India, 2017.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary">
+                        <div type="glossary" status="excluded">
                                 <list type="glossary">
                                         
                                         <item>
