--- a/translations/kangyur/translations/076-011_toh357-the_prophecy_of_gosrnga.xml
+++ b/translations/kangyur/translations/076-011_toh357-the_prophecy_of_gosrnga.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.3 <date>2021</date>
+                <edition>v 1.1.4 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -60,7 +60,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-06T12:10:36.248Z" user="admin">06/01/2022 12:10:36</note>
+                <note type="lastUpdated" date-time="2022-08-12T17:03:17.574Z" user="admin">12/08/2022 17:03:17</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-17T08:31:26.726Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-17T08:31:26.726Z" user="line-tofte">2.h</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2020-07-30T12:10:57.239Z" user="line-tofte">2.g</note>
@@ -96,6 +96,7 @@
     <note type="updated" update="text-version" value="1.1.2" date-time="2021-12-28T15:24:32.522Z" user="john">Several minor edits and additions inc. biblio ref.</note>
 
     <note type="updated" update="text-version" value="1.1.3" date-time="2022-01-06T12:10:32.207Z" user="john">Added biblio entries for Chomden Rigral's karchak.</note>
+    <note type="updated" update="text-version" value="1.1.4" date-time="2022-08-12T17:03:13.393Z" user="martina-cotter">Added pending links.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -287,9 +288,11 @@
                                                 the mythical to the historical. Curiously, mentions of Khotan feature in texts of this genre more frequently
                                                 than might be expected from its relatively modest historical profile, and the Khotan texts make up a substantial
                                                 portion of the group, suggesting that the theme may have been especially popular in Central Asia. 
-                                                One example of the genre that references Khotan but was probably not translated from a Khotanese source is the <title xml:lang="Sa-Ltn">Sūrya­garbha-mahā­vaipulya­sūtra</title> (Toh 257), which briefly tells the
+                                                One example of the genre that references Khotan but was probably not translated from a Khotanese source is the <title xml:lang="Sa-Ltn">Sūrya­garbha-mahā­vaipulya­sūtra</title> (Toh 257)<note place="end" xml:id="UT22084-076-011-293">Dharmachakra Translation Committee, trans. <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh257.html#UT22084-066-015-1122">The Quintessence of the Sun</ref>
+                            </title>, Toh 257 (84000: Translating the Words of the  Buddha, 2022).</note>, which briefly tells the
                                            story of the Gomasalaganda stūpa that is also found in the sūtra translated here.<note place="end" xml:id="UT22084-076-011-29"> The passage starts in the text in the Degé
-                                                   Kangyur, vol. 66 (mdo sde, za) F.236.a et seq.<ref rend="pending" target="https://read.84000.co/translation/toh257.html" inst="F.236.a, add citation, add bibl"/> This text, also known as the <title xml:lang="Sa-Ltn">Sūrya­garbha­paripṛcchā</title>, is
+                                              Kangyur, vol. 66 (mdo sde, za) <ref target="https://read.84000.co/translation/toh257.html#UT22084-066-015-1122">F.236.a et seq.</ref> This text, also known as the <title xml:lang="Sa-Ltn">Sūrya­garbha­paripṛcchā</title>, is
                                                         part of the Mahāsannipāta or “Great Collection” of texts, and other passages mentioning the same story
                                                         are found in another work belonging to the same collection, the <title xml:lang="Sa-Ltn">Candra­garbha­paripṛcchā</title>. This latter work
                                                         is represented in the Kangyur only by an excerpt (<ref rend="pending" target="https://read.84000.co/translation/toh356.html">Toh 356</ref>) which does not seem to include such
@@ -922,8 +925,8 @@
                                       Saṁghavardhana. <title xml:lang="Bo-Ltn">dgra bcom pa dge ’dun ’phel gyis lung bstan pa</title> (<title xml:lang="Sa-Ltn">Arhat­samghavardhana­vyakarana</title>). Toh 4201, Degé Tengyur vol. 275 (spring yig, nge) folios 161.b–168.b.<ref rend="pending" target="https://read.84000.co/translation/toh4201.html"/>
                                    </bibl>
                                    <bibl xml:id="UT22084-076-011-274">
-                                      <title xml:lang="Bo-Ltn">nyi ma’i snying po’i mdo</title> (<title xml:lang="Sa-Ltn">Sūrya­garbha­sūtra</title>). Toh 257,
-                                      Degé Kangyur vol. 66 (mdo sde, za), folios 91.b–245.b.<ref rend="pending" target="https://read.84000.co/translation/toh257.html"/>
+                                      <title xml:lang="Bo-Ltn">nyi ma’i snying po’i mdo</title> (<title xml:lang="Sa-Ltn">Sūrya­garbha­sūtra</title>). <ref target="https://read.84000.co/translation/toh257.html">Toh 257</ref>,
+                                      Degé Kangyur vol. 66 (mdo sde, za), folios 91.b–245.b.
                                    </bibl>
                                    <bibl xml:id="UT22084-076-011-272">
                                       <title xml:lang="Bo-Ltn">dri med ’od kyis zhus pa</title> (<title xml:lang="Sa-Ltn">Vimala­prabha­paripṛcchā</title>). Toh
@@ -940,6 +943,9 @@
                                    <bibl xml:id="UT22084-076-011-277">Chavannes, Édouard. “Voyage de Song-Yun dans l’Udyāna et le Gandhāra,” in <title xml:lang="fr">Bulletin de l’École Française d’Extrême Orient</title>, Tome 3, 1903.</bibl>
                                         <bibl xml:id="UT22084-076-011-130">Chopel, Gendun. <title xml:lang="en">Grains of Gold: Tales of a Cosmopolitan Traveler</title>. Translated by
                                                 Thupten Jinpa and Donald S. Lopez. Chicago: University of Chicago Press, 2014.</bibl>
+                                   <bibl xml:id="UT22084-076-011-292">Dharmachakra Translation Committee, trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh257.html">The Noble Very Extensive Sūtra “The Quintessence of the Sun”</ref>
+                        </title> (Toh 257). 84000: Translating the Words of the Buddha, 2022.</bibl>
                                    <bibl xml:id="UT22084-076-011-270">Dungkar Losang Trinlé (dung dkar blo bzang ’phrin las). <title xml:lang="Bo-Ltn">dung dkar tshig mdzod chen mo</title> [<title xml:lang="en">Dungkar 
                                       Tibetological Great Dictionary</title>].  Beijing: krung go’i bod rig pa dpe skrun khang (China Tibetology Publishing House), 2002.  </bibl>
                                         <bibl xml:id="UT22084-076-011-131">Emmerick, Ronald E. (1967). <title xml:lang="en">Tibetan Texts Concerning Khotan</title>. London: Oxford University Press,
