--- a/translations/kangyur/placeholders/054-002_toh121-the_sutra_of_the_great_parinirvana.xml
+++ b/translations/kangyur/placeholders/054-002_toh121-the_sutra_of_the_great_parinirvana.xml
@@ -23,14 +23,13 @@
 <editor role="copyEditor" ref="contributors.xml#person-52">Tracy Davis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>0.0.1 <date>2020</date>
+                <edition>v 0.0.2 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-054-002"/>
                 <date/>
-
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh121" type="text">
@@ -44,9 +43,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-03-13T11:52:46.436Z" user="admin">13/03/2020 11:52:46</note>
+                <note type="lastUpdated" date-time="2022-08-15T10:20:47.948Z" user="admin">15/08/2022 10:20:47</note>
 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-13T11:50:25.201Z" user="line-tofte">0.0.1</note>
-<note type="updated" update="translation-status" value="3" date-time="2020-03-13T11:50:25.201Z" user="line-tofte">3</note>
+<note type="updated" update="translation-status" value="3" date-time="2020-03-13T11:50:25.201Z" user="line-tofte">3</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-08-15T10:20:39.731Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-15T10:20:39.731Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
