--- a/translations/kangyur/placeholders/054-002_toh121-the_sutra_of_the_great_parinirvana.xml
+++ b/translations/kangyur/placeholders/054-002_toh121-the_sutra_of_the_great_parinirvana.xml
@@ -4,26 +4,21 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">yongs su mya ngan las 'das pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mahāparinirvāṇasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Great Parinirvāṇa</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yongs su mya ngan las 'das pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">mahāparinirvāṇasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">yongs su mya ngan las 'das pa'i mdo/</title>
+                <title type="otherTitle" xml:lang="en">[Note: a very short, 16 śloka fragment of the sūtra, translated from the Sanskrit in the later translation period by Kamalagupta and Rin chen bzang po.]</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāparinirvāṇasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mya ngan las 'das pa'i mdo chung ba/</title>
-                <title type="otherTitle" xml:lang="en">[Note: a very short, 16 śloka fragment of the sūtra, translated from the Sanskrit in the later translation period by Kamalagupta and Rin chen bzang po.]</title>
-                <author role="translatorMain" ref="contributors.xml#team-22"/>
-
-            
-<author role="translatorEng" ref="contributors.xml#person-142">Dr. Peter Alan Roberts</author>
-                <author role="translatorEng" ref="contributors.xml#person-143">Emily Bower</author>
-
-<consultant role="advisor" ref="contributors.xml#person-147">Ling-Lung Chen</consultant>
-                <consultant role="advisor" ref="contributors.xml#person-326">Wang Chih Pan</consultant>
-
-<editor role="copyEditor" ref="contributors.xml#person-52">Tracy Davis</editor>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yongs su mya ngan las 'das pa chen po'i mdo</title>
+                <author role="translatorMain" ref="eft:team-22"/>
+                <author role="translatorEng" ref="eft:person-142">Peter Alan Roberts</author>
+                <author role="translatorEng" ref="eft:person-143">Emily Bower</author>
+                <consultant role="advisor" ref="eft:person-147">Ling-Lung Chen</consultant>
+                <editor role="copyEditor" ref="eft:person-52">Tracy Davis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2020</date>
+                <edition>v 0.0.3 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -43,9 +38,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-15T10:20:47.948Z" user="admin">15/08/2022 10:20:47</note>
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-03-13T11:50:25.201Z" user="line-tofte">0.0.1</note>
-<note type="updated" update="translation-status" value="3" date-time="2020-03-13T11:50:25.201Z" user="line-tofte">3</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-08-15T10:20:39.731Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-15T10:20:39.731Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-08-15T10:22:34.62Z" user="admin">15/08/2022 10:22:34</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-13T11:50:25.201Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2020-03-13T11:50:25.201Z" user="line-tofte">3</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-08-15T10:20:39.731Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-15T10:20:39.731Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-15T10:22:26.6Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
