--- a/translations/kangyur/placeholders/054-002_toh121-the_sutra_of_the_great_parinirvana.xml
+++ b/translations/kangyur/placeholders/054-002_toh121-the_sutra_of_the_great_parinirvana.xml
@@ -13,12 +13,11 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yongs su mya ngan las 'das pa chen po'i mdo</title>
                 <author role="translatorMain" ref="eft:team-22"/>
                 <author role="translatorEng" ref="eft:person-142">Peter Alan Roberts</author>
-                <author role="translatorEng" ref="eft:person-143">Emily Bower</author>
+                <editor role="reviser" ref="eft:person-143">Emily Bower</editor>
                 <consultant role="advisor" ref="eft:person-147">Ling-Lung Chen</consultant>
-                <editor role="copyEditor" ref="eft:person-52">Tracy Davis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2020</date>
+                <edition>v 0.0.4 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -38,12 +37,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-15T10:22:34.62Z" user="admin">15/08/2022 10:22:34</note>
+                <note type="lastUpdated" date-time="2022-08-15T10:23:06.894Z" user="admin">15/08/2022 10:23:06</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-13T11:50:25.201Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-03-13T11:50:25.201Z" user="line-tofte">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-08-15T10:20:39.731Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-15T10:20:39.731Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-15T10:22:26.6Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-15T10:22:58.696Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
