--- a/translations/kangyur/placeholders/057-005_toh146-the_sutra_teaching_the_miracles_in_the_domain_of_skillful_means_that_the_bodhisattvas_have_at_their_disposition.xml
+++ b/translations/kangyur/placeholders/057-005_toh146-the_sutra_teaching_the_miracles_in_the_domain_of_skillful_means_that_the_bodhisattvas_have_at_their_disposition.xml
@@ -4,15 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">byang sems spyod yul thabs kyi yul la rnam 'phrul bstan pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">bodhisattva­gocaropāyaviṣayavikurvita­nirdeśasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra Teaching the Miracles in the Domain of Skillful Means that the Bodhisattvas Have at their Disposition</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byang chub sems dpa'i spyod yul thabs kyi yul la rnam par 'phrul pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryabodhisattva­gocaropāyaviṣayavikurvita­nirdeśanāmamahāyānasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">bodhisattva­gocaropāyaviṣayavikurvita­nirdeśasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">byang sems spyod yul thabs kyi yul la rnam 'phrul bstan pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">satyakaparivarta</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">āryabodhisattva­gocaropāyaviṣayavikurvita­nirdeśanāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bden pa po'i le'u zhes bya ba'i chos kyi rnam grangs</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">bden pa po'i le'u</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byang chub sems dpa'i spyod yul thabs kyi yul la rnam par 'phrul pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.1 <date>2020</date>
+                <edition>v 0.0.2 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -30,8 +32,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-09-01T09:43:19.777Z" user="admin">01/09/2020 09:43:19</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-09-01T09:43:18.064Z" user="john">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-08-16T15:04:58.834Z" user="admin">16/08/2022 15:04:58</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-09-01T09:43:18.064Z" user="john">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-16T15:04:56.733Z" user="john">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
