--- a/translations/kangyur/placeholders/085-005_toh485-a_portion_of_the_practice_of_the_sovereign_tantra_purifying_evil_destinies.xml
+++ b/translations/kangyur/placeholders/085-005_toh485-a_portion_of_the_practice_of_the_sovereign_tantra_purifying_evil_destinies.xml
@@ -13,10 +13,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">sbyong rgyud bu/</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2021</date>
+                <edition>v 0.0.5 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-085-005"/>
                 <date/>
             </publicationStmt>
@@ -32,10 +32,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-11T08:16:32.561Z" user="admin">11/08/2022 08:16:32</note>
+                <note type="lastUpdated" date-time="2022-08-17T08:10:49.306Z" user="admin">17/08/2022 08:10:49</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-17T16:19:06.257Z" user="john">0.0.1</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-01T12:00:28.38Z" user="john">Auto (update-titles)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-06-01T12:03:11.822Z" user="john">0.0.3</note>    <note type="updated" update="translation-status" value="4" date-time="2022-08-11T08:16:25.452Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-11T08:16:25.452Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.3" date-time="2021-06-01T12:03:11.822Z" user="john">0.0.3</note>    <note type="updated" update="translation-status" value="4" date-time="2022-08-11T08:16:25.452Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-11T08:16:25.452Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="3" date-time="2022-08-17T08:10:43.217Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-08-17T08:10:43.217Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
