--- a/translations/kangyur/translations/044-014_toh93-the_sutra_of_the_rsi_vyasas_questions.xml
+++ b/translations/kangyur/translations/044-014_toh93-the_sutra_of_the_rsi_vyasas_questions.xml
@@ -12,45 +12,135 @@
 
                                 <title type="mainTitle" xml:lang="en">The Seer Vyāsa’s
                                         Questions</title>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">drang srong rgyas pas zhus
-                                        pa</title>
-                                <title type="mainTitle" xml:lang="bo">དྲང་སྲོང་རྒྱས་པས་ཞུས་པ།</title>
+
+
+
+
+
 
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Ṛṣivyāsa­paripṛcchā</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa drang srong
-                                        rgyas pas zhus pa zhes bya ba theg pa chen po’i mdo</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་དྲང་སྲོང་རྒྱས་པས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+
+
+
+
+
+
+                                <title type="mainTitle" xml:lang="bo">དྲང་སྲོང་རྒྱས་པས་ཞུས་པ།</title>
+
+
+
+
+
+
+                                <title type="mainTitle" xml:lang="Bo-Ltn">drang srong rgyas pas zhus
+                                        pa</title>
+
+
+
+
+
+
                                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The
                                         Seer Vyāsa’s Questions”</title>
+
+
+
+
+
+
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­ṛṣivyāsa­paripṛcchānāma­mahāyāna­sūtra</title>
-                                <title type="otherTitle" xml:lang="zh"/>
 
 
 
 
-                                <author ref="eft:team-11" role="translatorMain">Translated by David
+
+
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa drang srong
+                                        rgyas pas zhus pa zhes bya ba theg pa chen po’i mdo</title>
+
+
+
+
+
+
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་དྲང་སྲོང་རྒྱས་པས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+
+
+
+
+
+
+                                <author role="translatorMain" ref="eft:team-11">Translated by David
                                         Jackson<lb/>under the patronage and supervision of 84000:
                                         Translating the Words of the Buddha</author>
 
-                                <author role="translatorEng" ref="eft:person-14">David
-                                        Jackson</author>
-                                <editor role="associateEditor" ref="eft:person-251">Nancy
-                                        Lin</editor>
-                                <consultant role="projectManager" ref="eft:person-14">David
-                                        Jackson</consultant>
+
+
+
+
+
+                                <author role="translatorEng" ref="eft:person-14">David Jackson</author>
+
+
+
+
+
+
+                                <editor role="associateEditor" ref="eft:person-251">Nancy Lin</editor>
+
+
+
+
+
+
+                                <consultant role="projectManager" ref="eft:person-14">David Jackson</consultant>
+
+
+
+
+
+
                                 <editor role="projectEditor" ref="eft:person-274">Adam Krug</editor>
-                                <editor role="projectEditor" ref="eft:person-139">John
-                                        Canti</editor>
+
+
+
+
+
+
+                                <editor role="projectEditor" ref="eft:person-139">John Canti</editor>
+
+
+
+
+
+
                                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
-                                <editor role="projectEditor" ref="eft:person-250">Rory
-                                        Lindsay</editor>
-                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina
-                                        Cotter</editor>
+
+
+
+
+
+
+                                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
+
+
+
+
+
+
+                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+
+
+
+
+
+
+                                <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
                         </titleStmt>
 
 
                         <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -95,54 +185,206 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-07-10T18:34:18.763Z" user="admin">10/07/2022 18:34:18</note>
+
+
+
+
+
+
+                                
+
+                                
+
+
+
+
+
 
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-09T07:31:20.86Z" user="andreas">v
                                         0.1.0</note>
+
+
+
+
+
+
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:59:32.3Z" user="mike">2.h</note>
+
+
+
+
+
+
                                 <note type="updated" update="translation-status" value="2.g" date-time="2021-09-07T12:21:19.734Z" user="line-tofte">2.g</note>
+
+
+
+
+
+
                                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-09-07T12:21:19.734Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
+
+
+
+
+
+
                                 <note type="updated" update="text-version" value="0.1.2" date-time="2021-09-07T12:22:00.555Z" user="line-tofte">Auto
                                         (update-contributors)</note>
+
+
+
+
+
+
                                 <note type="updated" update="text-version" value="0.1.3" date-time="2021-09-09T06:44:13.556Z" user="line-tofte">Auto
                                         (update-contributors)</note>
+
+
+
+
+
+
                                 <note type="updated" update="translation-status" value="2.f" date-time="2021-10-13T13:29:00.447Z" user="line-tofte">2.f</note>
+
+
+
+
+
+
                                 <note type="updated" update="text-version" value="0.1.4" date-time="2021-10-13T13:29:00.447Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
+
+
+
+
+
+
                                 <note type="updated" update="text-version" value="0.1.5" date-time="2021-10-13T13:29:28.05Z" user="line-tofte">Auto
                                         (update-contributors)</note>
+
+
+
+
+
+
                                 <note type="updated" update="text-version" value="0.1.6" date-time="2021-11-25T08:30:25.776Z" user="line-tofte">Auto
                                         (update-contributors)</note>
 
+
+
+
+
+
                                 <note type="updated" update="translation-status" value="2.e" date-time="2021-11-25T08:31:20.521Z" user="line-tofte">2.e</note>
+
+
+
+
+
 
                                 <note type="updated" update="text-version" value="0.1.7" date-time="2021-11-25T08:31:20.521Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
 
+
+
+
+
+
                                 <note type="updated" update="translation-status" value="2.d" date-time="2021-12-22T08:55:29.977Z" user="line-tofte">2.d</note>
+
+
+
+
+
 
                                 <note type="updated" update="text-version" value="0.1.8" date-time="2021-12-22T08:55:29.977Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
 
+
+
+
+
+
                                 <note type="updated" update="translation-status" value="2.c" date-time="2022-01-03T15:49:17.509Z" user="line-tofte">2.c</note>
+
+
+
+
+
 
                                 <note type="updated" update="text-version" value="0.1.9" date-time="2022-01-03T15:49:17.509Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
+
+
+
+
+
+
                                 <note type="updated" update="text-version" value="0.1.10" date-time="2022-02-14T13:44:04.273Z" user="line-tofte">Auto
                                         (update-contributors)</note>
+
+
+
+
+
+
                                 <note type="updated" update="translation-status" value="2.b" date-time="2022-02-28T08:53:34.964Z" user="line-tofte">2.b</note>
+
+
+
+
+
+
                                 <note type="updated" update="text-version" value="0.1.11" date-time="2022-02-28T08:53:34.964Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
+
+
+
+
+
+
                                 <note type="updated" update="text-version" value="0.1.12" date-time="2022-02-28T08:54:04.613Z" user="line-tofte">Auto
                                         (update-contributors)</note>
+
+
+
+
+
+
                                 <note type="updated" update="translation-status" value="2.a" date-time="2022-02-28T09:06:18.053Z" user="line-tofte">2.a</note>
+
+
+
+
+
+
                                 <note type="updated" update="text-version" value="0.1.13" date-time="2022-02-28T09:06:18.053Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-                            <note type="updated" update="translation-status" value="2" date-time="2022-03-15T12:33:32.071Z" user="line-tofte">2</note>
-                            <note type="updated" update="text-version" value="0.0.2" date-time="2022-03-15T12:33:32.071Z" user="line-tofte">Auto (update-publication-status)</note>
-                            <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-10T18:34:14.981Z" user="john">Harmonization of trailer and colophon</note>
-                        </notesStmt>
+
+
+
+
+
+
+                                <note type="updated" update="translation-status" value="2" date-time="2022-03-15T12:33:32.071Z" user="line-tofte">2</note>
+
+
+
+
+
+
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2022-03-15T12:33:32.071Z" user="line-tofte">Auto (update-publication-status)</note>
+
+
+
+
+
+
+                                <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-10T18:34:14.981Z" user="john">Harmonization of trailer and colophon</note>
+                        <note type="lastUpdated" date-time="2022-08-18T07:35:52.151Z" user="admin">18/08/2022 07:35:52</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-18T07:35:44.08Z" user="line-tofte">Auto (update-contributors)</note>
+            </notesStmt>
                 </fileDesc>
         </teiHeader>
         <text>
