--- a/translations/kangyur/placeholders/096-054_toh805-the_tantra_the_questions_of_subahu.xml
+++ b/translations/kangyur/placeholders/096-054_toh805-the_tantra_the_questions_of_subahu.xml
@@ -19,10 +19,10 @@
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2020</date>
+                <edition>v 0.0.13 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-096-054"/>
                 <date/>
             </publicationStmt>
@@ -38,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-02T10:23:09.994Z" user="admin">02/08/2022 10:23:09</note>
+                <note type="lastUpdated" date-time="2022-08-22T10:40:16.372Z" user="admin">22/08/2022 10:40:16</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-05T08:42:54.93Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -58,6 +58,8 @@
                 <note type="updated" update="translation-status" value="2.b" date-time="2022-08-02T10:22:19.947Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2022-08-02T10:22:19.947Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-08-02T10:23:02.239Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2022-08-22T10:40:08.231Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2022-08-22T10:40:08.231Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
