--- a/translations/kangyur/placeholders/090-005_toh561-the_great_amulet_queen_of_incantations.xml
+++ b/translations/kangyur/placeholders/090-005_toh561-the_great_amulet_queen_of_incantations.xml
@@ -17,11 +17,12 @@
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
                 <author role="translatorEng" ref="eft:person-51">James Gentry</author>
                 <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
-                <consultant role="dharmaMaster" ref="eft:person-40">Chökyi Nyima Rinpoche</consultant>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
                 <editor role="copyEditor" ref="eft:person-273">Janna White</editor>
+                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2019</date>
+                <edition>v 0.0.8 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -41,7 +42,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-02T09:08:15.598Z" user="admin">02/08/2022 09:08:15</note>
+                <note type="lastUpdated" date-time="2022-08-24T09:25:20.558Z" user="admin">24/08/2022 09:25:20</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:23:41.721Z" user="mike">2.d</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-08T10:24:15.249Z" user="line-tofte">Auto (update-contributors)</note>
@@ -49,6 +50,7 @@
                 <note type="updated" update="text-version" value="0.0.4" date-time="2021-07-08T10:25:18.405Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-07-08T10:25:40.58Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-08-02T09:08:13.592Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-08-24T09:25:18.389Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
