--- a/translations/kangyur/placeholders/090-045_toh601,884-the_incantation_of_the_reliquary.xml
+++ b/translations/kangyur/placeholders/090-045_toh601,884-the_incantation_of_the_reliquary.xml
@@ -16,9 +16,10 @@
                 <author role="translatorEng" ref="eft:person-380">Julian Schott</author>
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2021</date>
+                <edition>v 0.0.12 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.c">
@@ -46,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-11T09:18:38.698Z" user="admin">11/07/2022 09:18:38</note>
+                <note type="lastUpdated" date-time="2022-08-24T12:39:51.13Z" user="admin">24/08/2022 12:39:51</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-10-29T14:24:28.861Z" user="line-tofte">3</note>
@@ -65,6 +66,7 @@
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-06-28T13:25:00.213Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2022-07-11T09:18:31.17Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-11T09:18:31.17Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2022-08-24T12:39:43.008Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
