--- a/translations/kangyur/placeholders/037-001_toh44-39-chapter_39_the_teaching_on_the_inconceivability_of_the_buddhadharma.xml
+++ b/translations/kangyur/placeholders/037-001_toh44-39-chapter_39_the_teaching_on_the_inconceivability_of_the_buddhadharma.xml
@@ -8,10 +8,12 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">sang rgyas chos bsam mi khyab bstan pa'i le'u/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">[Note: see Toh 187, which is close but not identical.]</title>
                 <title type="otherTitle" xml:lang="zh">《華嚴經 》之《佛不思議法品》</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-338">Ana Cristina Lopes</author>
                 <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2019</date>
+                <edition>v 0.0.6 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -31,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-25T10:47:27.975Z" user="admin">25/08/2022 10:47:27</note>
+                <note type="lastUpdated" date-time="2022-08-25T10:48:05.404Z" user="admin">25/08/2022 10:48:05</note>
                 <note type="updated" update="text-version" value="" date-time="2019-03-09T18:28:00.74Z" user="john"/>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-17T02:19:46.003Z" user="amy">Auto (update-sponsorship)</note>
@@ -39,6 +41,7 @@
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-29T15:53:35.789Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-08-25T10:47:21.759Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-08-25T10:47:21.759Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-25T10:48:03.241Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
