--- a/translations/kangyur/translations/062-006_toh206_pure_sustenance_of_food.xml
+++ b/translations/kangyur/translations/062-006_toh206_pure_sustenance_of_food.xml
@@ -5,16 +5,13 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">Pure Sustenance of Food</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn"/>
                 <title type="mainTitle" xml:lang="Bo-Ltn">zas kyi ’tsho ba rnam par dag pa</title>
                 <title type="mainTitle" xml:lang="bo">ཟས་ཀྱི་འཚོ་བ་རྣམ་པར་དག་པ།</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">zas kyi ’tsho ba rnam par dag pa zhes bya
-                    ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="bo">ཟས་ཀྱི་འཚོ་བ་རྣམ་པར་དག་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="longTitle" xml:lang="en">The Mahāyāna Sūtra: Pure Sustenance of
                     Food</title>
-                <title type="longTitle" xml:lang="Sa-Ltn"/>
-                <title type="otherTitle" xml:lang="zh"/>
+                <title type="longTitle" xml:lang="bo">ཟས་ཀྱི་འཚོ་བ་རྣམ་པར་དག་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">zas kyi ’tsho ba rnam par dag pa zhes bya
+                    ba theg pa chen po’i mdo</title>
                 <author role="translatorMain" ref="eft:team-49">Translated by the Subhashita
                     Translation Group<lb/>under the patronage and supervision of 84000: Translating
                     the Words of the Buddha</author>
@@ -24,9 +21,11 @@
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
                 <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+                <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
+                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.17 <date>2022</date>
+                <edition>v 0.0.18 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2">
@@ -61,7 +60,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-12T06:46:32.78Z" user="admin">12/04/2022 06:46:32</note>
+                <note type="lastUpdated" date-time="2022-08-26T08:10:59.222Z" user="admin">26/08/2022 08:10:59</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:44:44.856Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:44:44.856Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:06:51.159Z" user="line-tofte">3</note>
@@ -81,20 +80,14 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-28T08:14:01.773Z" user="line-tofte">Auto
                     (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2021-12-01T11:01:55.355Z" user="line-tofte">2.e</note>
-
                 <note type="updated" update="text-version" value="0.0.8" date-time="2021-12-01T11:01:55.355Z" user="line-tofte">Auto
                     (update-publication-status)</note>
-
                 <note type="updated" update="text-version" value="0.0.9" date-time="2021-12-01T11:02:18.742Z" user="line-tofte">Auto
                     (update-contributors)</note>
-
                 <note type="updated" update="translation-status" value="2.d" date-time="2021-12-07T10:58:39.153Z" user="line-tofte">2.d</note>
-
                 <note type="updated" update="text-version" value="0.0.10" date-time="2021-12-07T10:58:39.153Z" user="line-tofte">Auto
                     (update-publication-status)</note>
-
                 <note type="updated" update="translation-status" value="2.c" date-time="2022-01-19T10:48:26.646Z" user="line-tofte">2.c</note>
-
                 <note type="updated" update="text-version" value="0.0.11" date-time="2022-01-19T10:48:26.646Z" user="line-tofte">Auto
                     (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2022-03-09T14:40:03.165Z" user="line-tofte">2.b</note>
@@ -109,6 +102,7 @@
                     (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2" date-time="2022-04-12T06:46:27.084Z" user="line-tofte">2</note>
                 <note type="updated" update="text-version" value="0.0.17" date-time="2022-04-12T06:46:27.084Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.18" date-time="2022-08-26T08:10:50.947Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -365,7 +359,7 @@
                         340). 84000: Translating the Words of the Buddha, 2020.</bibl>
                 </div>
             </div>
-            <div type="glossary">
+            <div type="glossary" status="excluded">
                 <list type="glossary">
                     <item>
                         <gloss xml:id="UT22084-062-006-50" type="term" mode="match">
