--- a/translations/kangyur/placeholders/050-003_toh112-the_white_lotus_of_compassion.xml
+++ b/translations/kangyur/placeholders/050-003_toh112-the_white_lotus_of_compassion.xml
@@ -20,10 +20,11 @@
                 <editor role="copyEditor" ref="eft:person-273">Janna White</editor>
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
                 <editor role="proofreader" ref="eft:person-143">Emily Bower</editor>
+                <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
                 <sponsor ref="sponsors.xml#sponsor-8">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.9 <date>2019</date>
+                <edition>v 0.1.10 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -43,7 +44,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T04:27:31.476Z" user="admin">26/07/2022 04:27:31</note>
+                <note type="lastUpdated" date-time="2022-08-30T11:01:02.195Z" user="admin">30/08/2022 11:01:02</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-22T06:04:52.426Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:12:23.349Z" user="mike">2.d</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T09:04:52.552Z" user="line-tofte">Auto (update-contributors)</note>
@@ -55,6 +56,7 @@
                 <note type="updated" update="text-version" value="0.1.7" date-time="2022-04-28T10:05:08.219Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.1.8" date-time="2022-06-15T12:56:27.388Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.1.9" date-time="2022-07-26T04:27:23.723Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.1.10" date-time="2022-08-30T11:00:52.939Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
