--- a/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
+++ b/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
@@ -29,9 +29,10 @@
         <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
         <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
         <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+        <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="2">
@@ -67,7 +68,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-06-28T05:43:23.852Z" user="admin">28/06/2022 05:43:23</note>
+        <note type="lastUpdated" date-time="2022-09-01T10:03:33.485Z" user="admin">01/09/2022 10:03:33</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:52:10.736Z" user="john">v 0.1.0</note>
         <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:52:10.736Z" user="john">3</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-09T08:10:37.707Z" user="line-tofte">2.h</note>
@@ -109,7 +110,8 @@
         <note type="updated" update="text-version" value="0.1.21" date-time="2022-05-12T09:24:46.858Z" user="line-tofte">Auto (update-contributors)</note>
         <note type="updated" update="translation-status" value="2" date-time="2022-06-28T05:42:25.32Z" user="line-tofte">2</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-28T05:42:25.32Z" user="line-tofte">Auto (update-publication-status)</note>
-          <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-28T05:43:16.205Z" user="line-tofte">Auto (update-contributors)</note>
+        <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-28T05:43:16.205Z" user="line-tofte">Auto (update-contributors)</note>
+          <note type="updated" update="text-version" value="0.0.4" date-time="2022-09-01T10:03:18.395Z" user="line-tofte">Auto (update-contributors)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
