--- a/translations/kangyur/translations/062-008_toh208-the_great_rumble.xml
+++ b/translations/kangyur/translations/062-008_toh208-the_great_rumble.xml
@@ -24,9 +24,10 @@
                                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
                                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
                                 <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+                                <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -70,7 +71,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-04-13T08:43:36.691Z" user="admin">13/04/2022 08:43:36</note>
+                                <note type="lastUpdated" date-time="2022-09-01T14:38:18.155Z" user="admin">01/09/2022 14:38:18</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:45:27.762Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:45:27.762Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:07:57.739Z" user="line-tofte">3</note>
@@ -90,20 +91,14 @@
                                 <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-28T08:06:16.362Z" user="line-tofte">Auto
                                         (update-contributors)</note>
                                 <note type="updated" update="translation-status" value="2.e" date-time="2021-12-01T11:03:02.485Z" user="line-tofte">2.e</note>
-
                                 <note type="updated" update="text-version" value="0.0.8" date-time="2021-12-01T11:03:02.485Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-
                                 <note type="updated" update="text-version" value="0.0.9" date-time="2021-12-01T11:03:25.651Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-
                                 <note type="updated" update="translation-status" value="2.d" date-time="2021-12-07T11:01:41.831Z" user="line-tofte">2.d</note>
-
                                 <note type="updated" update="text-version" value="0.0.10" date-time="2021-12-07T11:01:41.831Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-
                                 <note type="updated" update="translation-status" value="2.c" date-time="2022-01-19T10:45:55.996Z" user="line-tofte">2.c</note>
-
                                 <note type="updated" update="text-version" value="0.0.11" date-time="2022-01-19T10:45:55.996Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
                                 <note type="updated" update="translation-status" value="2.b" date-time="2022-03-09T14:42:52.694Z" user="line-tofte">2.b</note>
@@ -116,9 +111,10 @@
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.16" date-time="2022-04-04T09:40:24.634Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                            <note type="updated" update="translation-status" value="2" date-time="2022-04-13T08:27:47.749Z" user="line-tofte">2</note>
-                            <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T08:27:47.749Z" user="line-tofte">Auto (update-publication-status)</note>
-                            <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-13T08:43:31.09Z" user="line-tofte">Auto (update-contributors)</note>
+                                <note type="updated" update="translation-status" value="2" date-time="2022-04-13T08:27:47.749Z" user="line-tofte">2</note>
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T08:27:47.749Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-13T08:43:31.09Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="text-version" value="0.0.4" date-time="2022-09-01T14:38:09.982Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -559,7 +555,7 @@
                                                 New York: Wisdom Publications, 1995.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary">
+                        <div type="glossary" status="excluded">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-062-008-46">
